refine prompt